Bug 185555 - assert() at WebCore::SVGUseElement::buildShadowTree, SVGUseElement.cpp:551
Summary: assert() at WebCore::SVGUseElement::buildShadowTree, SVGUseElement.cpp:551
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.2.0
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 177309 180899 187766 188228 188802 189227 189529 191692 193130 196610 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-25 19:43 UTC by Jan Kundrát
Modified: 2009-06-15 14:03 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
konq-svg.kcrash (9.79 KB, text/plain)
2009-02-25 19:44 UTC, Jan Kundrát
Details
tarball of the problematic webpage (31.03 KB, application/x-tbz)
2009-02-25 19:51 UTC, Jan Kundrát
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Kundrát 2009-02-25 19:43:10 UTC
Version:            (using KDE 4.2.0)
Compiler:          Gentoo 4.1.2 p1.1 
OS:                Linux
Installed from:    Gentoo Packages

I have konqueror from kde4 running inside a kde3 session on a host called pc134c. When I ssh into that box and launch konqueror via the SSH connection, it restores the session, leading to the backtrace that'll be attached.
Comment 1 Jan Kundrát 2009-02-25 19:44:24 UTC
Created attachment 31636 [details]
konq-svg.kcrash
Comment 2 Jan Kundrát 2009-02-25 19:51:01 UTC
Created attachment 31637 [details]
tarball of the problematic webpage

Attaching a tarball saved by Opera. Still crashes on my box when opening its contents. Original's available from http://www.redhat.com/docs/en-US/Red_Hat_Enterprise_Linux/5/html/Deployment_Guide/index.html , but note that it used to work about a week ago, so it might change again.
Comment 3 Nicolas L. 2009-03-05 00:17:35 UTC
confirmed today on mandriva with kde 4.2.1
Comment 4 Tommi Tervo 2009-03-05 07:26:03 UTC
nqueror(14075) DOM::DocumentImpl::createSVGElement: "{ns:2,[http://www.w3.org/2000/svg] local:329,[use]}"
konqueror(14075) DOM::DocumentImpl::createSVGElement: svg text:    "{ns:2,[http://www.w3.org/2000/svg] local:200,[text]}"
konqueror(14075) WebCore::SVGURIReference::parseMappedAttribute: parse "transform" "translate(-94.61853,1.913321)"
konqueror(14075) WebCore::SVGURIReference::parseMappedAttribute: parse "id" "use4312"
konqueror(14075) WebCore::SVGStyledElement::parseMappedAttribute: parse: "id" "use4312" id= 65764
konqueror(14075) WebCore::SVGStyledElement::parseMappedAttribute: propId 0
konqueror(14075) WebCore::SVGURIReference::parseMappedAttribute: parse "href" "#path650"
konqueror(14075) WebCore::SVGURIReference::parseMappedAttribute: set href base value "#path650"
konqueror: /home/tomtervo/src/kdelibs/khtml/svg/SVGUseElement.cpp:551: void WebCore::SVGUseElement::buildShadowTree(WebCore::SVGElement*, WebCore::SVGElementInstance*): Assertion `newChildPtr' failed.
Comment 5 Maksim Orlovich 2009-03-27 16:39:54 UTC
*** Bug 188228 has been marked as a duplicate of this bug. ***
Comment 6 Maksim Orlovich 2009-03-27 16:41:15 UTC
*** Bug 187766 has been marked as a duplicate of this bug. ***
Comment 7 Maksim Orlovich 2009-03-27 16:42:58 UTC
*** Bug 180899 has been marked as a duplicate of this bug. ***
Comment 8 Maksim Orlovich 2009-03-27 17:05:39 UTC
This starts off as bug 177309, but even if I fix that, it further crashes on navigating away
Comment 9 FiNeX 2009-04-13 23:38:54 UTC
*** Bug 189529 has been marked as a duplicate of this bug. ***
Comment 10 Maksim Orlovich 2009-05-05 16:56:48 UTC
*** Bug 191692 has been marked as a duplicate of this bug. ***
Comment 11 Maksim Orlovich 2009-05-23 20:02:05 UTC
*** Bug 193130 has been marked as a duplicate of this bug. ***
Comment 12 Maksim Orlovich 2009-05-23 20:02:11 UTC
*** Bug 189227 has been marked as a duplicate of this bug. ***
Comment 13 Maksim Orlovich 2009-05-23 20:02:17 UTC
*** Bug 177309 has been marked as a duplicate of this bug. ***
Comment 14 Maksim Orlovich 2009-05-23 20:02:33 UTC
*** Bug 188802 has been marked as a duplicate of this bug. ***
Comment 15 Maksim Orlovich 2009-05-23 21:30:05 UTC
SVN commit 971950 by orlovich:

Fix the root cause of the SVGUseElement assert on building shadow trees --- 
SVG element's weren't implementign localName (and their implementations of 
prefix and tagName weren't right, either). This commit centralizes handling of all
these in one spot --- there is no longer any reason for special implementations with IDString use.

CCBUG:185555


 M  +0 -25     html/html_elementimpl.cpp  
 M  +0 -2      html/html_elementimpl.h  
 M  +0 -1      svg/SVGAElement.h  
 M  +0 -1      svg/SVGAltGlyphElement.h  
 M  +0 -6      svg/SVGCircleElement.cpp  
 M  +0 -2      svg/SVGCircleElement.h  
 M  +0 -2      svg/SVGClipPathElement.h  
 M  +0 -5      svg/SVGDefsElement.cpp  
 M  +0 -2      svg/SVGDefsElement.h  
 M  +0 -2      svg/SVGDescElement.h  
 M  +1 -0      svg/SVGElement.cpp  
 M  +0 -6      svg/SVGEllipseElement.cpp  
 M  +0 -2      svg/SVGEllipseElement.h  
 M  +0 -2      svg/SVGFontElement.h  
 M  +0 -2      svg/SVGGElement.h  
 M  +0 -1      svg/SVGHKernElement.h  
 M  +0 -2      svg/SVGLineElement.h  
 M  +0 -5      svg/SVGLinearGradientElement.cpp  
 M  +0 -2      svg/SVGLinearGradientElement.h  
 M  +0 -5      svg/SVGPathElement.cpp  
 M  +0 -2      svg/SVGPathElement.h  
 M  +0 -4      svg/SVGPolygonElement.cpp  
 M  +0 -1      svg/SVGPolygonElement.h  
 M  +0 -5      svg/SVGPolylineElement.cpp  
 M  +0 -1      svg/SVGPolylineElement.h  
 M  +0 -5      svg/SVGRadialGradientElement.cpp  
 M  +0 -2      svg/SVGRadialGradientElement.h  
 M  +0 -5      svg/SVGRectElement.cpp  
 M  +0 -2      svg/SVGRectElement.h  
 M  +0 -3      svg/SVGSVGElement.h  
 M  +0 -2      svg/SVGScriptElement.h  
 M  +0 -5      svg/SVGStopElement.cpp  
 M  +0 -2      svg/SVGStopElement.h  
 M  +0 -5      svg/SVGStyleElement.cpp  
 M  +0 -3      svg/SVGStyleElement.h  
 M  +0 -2      svg/SVGTSpanElement.h  
 M  +0 -2      svg/SVGTextElement.h  
 M  +0 -2      svg/SVGTextPathElement.h  
 M  +0 -1      svg/SVGTitleElement.h  
 M  +0 -2      svg/SVGUseElement.h  
 M  +25 -21    xml/dom_elementimpl.cpp  
 M  +2 -4      xml/dom_elementimpl.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=971950
Comment 16 Maksim Orlovich 2009-05-23 23:08:57 UTC
SVN commit 971973 by orlovich:

Fix crash on exiting pages with use -- we need to detach the children 
in the shadow tree first, since they unregister from the parent renderer.

Also, fix a bunch of porting errors spotted when studying the code.
BUG: 185555


 M  +8 -6      SVGUseElement.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=971973
Comment 17 Dario Andres 2009-06-15 14:03:12 UTC
*** Bug 196610 has been marked as a duplicate of this bug. ***