Fix crash on exiting pages with use -- we need to detach the children in the shadow tree first, since they unregister from the parent renderer.

Also, fix a bunch of porting errors spotted when studying the code.
BUG: 185555

svn path=/trunk/KDE/kdelibs/; revision=971973